wip: feeds and services for neynar, icebreaker, and nouns builder api requests

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://user:password@localhost:6432/postgres
+NEYNAR_API_KEY=<YOUR_NEYNAR_API_KEY>
 NEYNAR_CLIENT_ID=<YOUR_NEYNAR_CLIENT_ID>
