--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.16.0",
     "@neynar/nodejs-sdk": "^1.58.0",
+    "@shopify/flash-list": "^1.7.1",
     "@tamagui/config": "^1.112.23",
     "@tamagui/image-next": "^1.112.23",
     "@tamagui/lucide-icons": "^1.112.23",
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-virtual": "^3.10.8",
     "@vxrn/color-scheme": "1.1.297",
     "better-sqlite3": "^11.3.0",
     "dotenv": "^16.4.5",
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
     "@tamagui/vite-plugin": "^1.112.23",
+    "@tanstack/eslint-plugin-query": "^5.59.2",
     "tsx": "^4.19.1",
     "vite": "6.0.0-beta.1"
   }
