--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.16.0",
+    "@frames.js/render": "^0.3.16",
     "@neynar/nodejs-sdk": "^1.58.0",
     "@shopify/flash-list": "^1.7.1",
     "@tamagui/config": "^1.112.23",
