--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "one-example",
-    "slug": "one-example",
+    "name": "one-farcaster-example",
+    "slug": "one-farcaster-example",
     "sdkVersion": "51.0.0",
     "platforms": [
       "ios",
